test/variables/kbrady/ref-to-const.good
ref-to-const.chpl:2: error: Cannot set a non-const reference to a const variable.
