test/variables/kbrady/ref-to-const.chpl
const x = 5;
ref y = x;
y += 1;
writeln(x, ' ', y);
